Using the settings minimum and maximum in window.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ add_executable(server
     desktop/server/main.cpp
     desktop/server/src/window.cpp
     )
-target_include_directories(server PRIVATE desktop/server/include)
+target_include_directories(server PRIVATE desktop/server/include shared)
 target_link_libraries(server PRIVATE Qt6::Widgets)
 
 if(NOT EXISTS "$ENV{HOME}/.local/share/fonts/MaterialIcons.ttf")
