--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(client
     desktop/client/src/window.cpp
     desktop/client/src/canvas.cpp
     desktop/client/src/comservice.cpp
+    desktop/client/src/tcpservice.cpp
     )
 target_include_directories(client PRIVATE desktop/client/include shared)
 target_link_libraries(client PRIVATE Qt6::Widgets)
@@ -22,6 +23,7 @@ add_executable(server
     desktop/server/main.cpp
     desktop/server/src/window.cpp
     desktop/server/src/comservice.cpp
+    desktop/server/src/tcpservice.cpp
     )
 target_include_directories(server PRIVATE desktop/server/include shared)
 target_link_libraries(server PRIVATE Qt6::Widgets)
